http:// is not needed

--- a/post.html
+++ b/post.html
@@ -11,7 +11,7 @@
   </head>
   <body>
 <p><code>
-curl -T my_file.mp3 http://h45h.com/
+curl -T my_file.mp3 h45h.com
 </code>
 </p>
     <form action="." method="post">
